test/fail/bin_punc03.v3
//@parse
class bin_punc03 {
	var d: int = 0b01111.0101;
	var e: int = 0b010101.0100.1111;
	var f: int = 0b11111111.1111.1111;
	var g: int = 0b1111.0000.11110000.1111.0000.11110000;
}
